# saitenka

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  LICENSING.md  README.md  RELEASING.md  ROADMAP.md  cliff.toml  pyproject.toml
deinflect/: NOTICE  README.md  pyproject.toml
deinflect/src/saitenka_deinflect/: __init__.py  engine.py
deinflect/src/saitenka_deinflect/data/: japanese_transforms.json
deinflect/tests/: test_deinflect.py
install/: README.md  doctor-macos.sh  doctor-windows.ps1  install-macos.sh  install-windows.cmd  install-windows.ps1  make_bundle.py  overlay-install.ps1  overlay-install.sh
overlay/: .gitignore  .importlinter  BENCHMARKS.md  README.md  RUNNING.md  complexipy-snapshot.json  overlay.example.toml  pyproject.toml
overlay/compare/: .gitignore  README.md  cases.py  dump_transforms.mjs  generate.py  yomitan_capture.py
overlay/examples/: bench_responsiveness.py  mpv_overlay.py  mpv_reader.py  render_png.py
overlay/rust/: README.md
overlay/src/overlay/: __init__.py  fonts.py  model.py  otel_metrics.py  panel.py  resources.py
overlay/src/overlay/app/: __init__.py  anki.py  card_preview.py  cli.py  config.py  conflicts.py  controller.py  crashlog.py  dictdb.py  dictionary.py  doctor.py  fsrs.py  init_wizard.py  jimaku.py  loading.py  logsetup.py  lookup.py  media.py  miner.py  miner_ui.py  nested_popup.py  otel_export.py  otel_metrics.py  overlay_ids.py  paths.py  perf.py  plugin.py  popups.py  prefetch.py  procutil.py  progress.py  reader_deps.py  relocate.py  report.py  resync.py  scoring.py  setup_wizard.py  signals.py  sub_index.py  subnav.py  (+10 more)
overlay/src/overlay/assets/: __init__.py  saitenka.lua
overlay/src/overlay/draw/: __init__.py  chip.py  icons.py  pitch.py
overlay/src/overlay/mpvio/: __init__.py  compositor.py  discover.py  ipc.py  launch.py  osd.py  transport.py
overlay/src/overlay/raster/: __init__.py  pillow_backend.py  protocol.py
overlay/src/overlay/render/: __init__.py  document.py  flow.py  layout.py  ruby.py  text.py
overlay/src/overlay/sc/: __init__.py  model.py  walk.py
overlay/tests/: conftest.py  dicthelp.py  driver.py  fake_mpv.py  fake_mpv_server.py  test_anki_config.py  test_anki_launch.py  test_attach.py  test_bench_pathological.py  test_bundle_installers.py  test_card_preview.py  test_cli.py  test_coloring.py  test_compare.py  test_config.py  test_conflicts.py  test_controller.py  test_crashlog.py  test_dict_tabs.py  test_dictdb.py  test_dictionary.py  test_doctor.py  test_fakefs.py  test_fonts.py  test_fsrs.py  test_ft_gil.py  test_install_wheel.py  test_interaction.py  test_jimaku_furigana.py  test_jimaku_key.py  test_kanji.py  test_launch.py  test_layering.py  test_lazy_panel.py  test_live_mpv.py  test_loading.py  test_logsetup.py  test_media.py  test_mining.py  test_mvp_subtitle.py  (+39 more)
overlay/tests/fixtures/: sc_list.json  sc_ruby.json  yomu.json
overlay/tests/golden/: sample_trace.json
tools/: anime_chooser.py  anki_annotate_source.py  anki_build_decks.py  anki_normalize_fields.py  anki_rank_dicts.py  anki_refile_by_state.py
tools/freq/: README.md
