[project]
name = "saitenka-overlay-deinflect"
version = "0.1.0"
description = "Japanese deinflection chain for saitenka-overlay — derived from Yomitan (GPL-3.0)"
readme = "README.md"
requires-python = ">=3.13"
license = "GPL-3.0-or-later"
license-files = ["LICENSE", "NOTICE"]
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/saitenka_deinflect"]

[tool.pytest.ini_options]
testpaths = ["tests"]
